fixed header nav on index.html so it stretches full width of viewport

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
     /* padding-top: 100px; */
-    padding-bottom: 150px;
+    /* padding-bottom: 150px; */
     overflow-x: hidden;
 }
 /* -----------------------------------------Fonts */
